[gd_scene load_steps=8 format=3 uid="uid://dwu4vhba7uc2m"]

[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory.gd" id="1"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory.gd" id="2"]
[ext_resource type="Script" path="res://examples/inventory_transfer.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://bju6hohmp15ua" path="res://images/item_key.png" id="5"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_item_slot.gd" id="6"]
[ext_resource type="JSON" path="res://tests/data/prototree_basic.json" id="6_yy1r8"]
[ext_resource type="Script" path="res://addons/gloot/core/item_slot.gd" id="8_v60ia"]

[node name="InventoryTransfer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CtrlInventory" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
inventory = NodePath("../../../Inventory")
default_item_icon = ExtResource("5")

[node name="CtrlInventory2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
inventory = NodePath("../../../Inventory2")
default_item_icon = ExtResource("5")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2

[node name="CtrlItemSlot" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/PanelContainer" node_paths=PackedStringArray("item_slot")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("6")
item_slot = NodePath("../../../../../ItemSlot")
label_visible = false

[node name="BtnEquipL" type="Button" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="BtnUnequipL" type="Button" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Unequip"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Use the buttons above to equip/unequip an item from the left inventory.
Use the buttons below to transfer items from one inventory to the other."

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnRToL" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "<<<"

[node name="BtnLToR" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = ">>>"

[node name="Inventory" type="Node" parent="."]
script = ExtResource("2")
prototree_json = ExtResource("6_yy1r8")
_serialized_format = {
"constraints": {},
"items": [{
"prototree": "res://tests/data/prototree_basic.json",
"prototype_path": "/item1"
}, {
"prototree": "res://tests/data/prototree_basic.json",
"prototype_path": "/item1/item_2"
}],
"node_name": "Inventory",
"prototree": "res://tests/data/prototree_basic.json"
}

[node name="Inventory2" type="Node" parent="."]
script = ExtResource("2")
prototree_json = ExtResource("6_yy1r8")
_serialized_format = {
"constraints": {},
"items": [{
"prototree": "res://tests/data/prototree_basic.json",
"prototype_path": "/item1"
}, {
"prototree": "res://tests/data/prototree_basic.json",
"prototype_path": "/item1/item_2"
}],
"node_name": "Inventory2",
"prototree": "res://tests/data/prototree_basic.json"
}

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource("8_v60ia")
prototree_json = ExtResource("6_yy1r8")
_serialized_format = {}
